// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionSheet Render without Crashing 1`] = `
<body>
  Object {}
  <div />
  <ui5-responsive-popover
    accessible-name="Available Actions"
    class="ActionSheet-actionSheet myCustomClass"
    data-actionsheet="true"
    horizontal-align="Center"
    placement-type="Right"
    ui5-responsive-popover=""
    vertical-align="Center"
  >
    <div
      data-component-name="ActionSheetMobileContent"
      role="application"
    >
      <ui5-button
        accessible-name="Accept Item 1 of 3"
        data-action-btn-index="0"
        design="Transparent"
        tabindex="0"
        ui5-button=""
      >
        Accept
      </ui5-button>
      <ui5-button
        accessible-name="Reject Item 2 of 3"
        data-action-btn-index="1"
        design="Transparent"
        tabindex="-1"
        ui5-button=""
      >
        Reject
      </ui5-button>
      <ui5-button
        accessible-name="This is my super long text! Item 3 of 3"
        data-action-btn-index="2"
        design="Transparent"
        tabindex="-1"
        ui5-button=""
      >
        This is my super long text!
      </ui5-button>
    </div>
  </ui5-responsive-popover>
</body>
`;

exports[`ActionSheet does not crash with other component 1`] = `
<body>
  Object {
    Symbol(SameObject caches): Object {
      "childNodes": NodeList [
        <span
          aria-live="polite"
          class="ui5-invisiblemessage-polite"
          role="alert"
          style="position: absolute; clip: rect(1px, 1px, 1px, 1px); user-select: none; left: -1000px; top: -1000px; pointer-events: none;"
        />,
        <span
          aria-live="assertive"
          class="ui5-invisiblemessage-assertive"
          role="alert"
          style="position: absolute; clip: rect(1px, 1px, 1px, 1px); user-select: none; left: -1000px; top: -1000px; pointer-events: none;"
        />,
      ],
    },
  }
  <div />
  <ui5-responsive-popover
    accessible-name="Available Actions"
    class="ActionSheet-actionSheet"
    data-actionsheet="true"
    horizontal-align="Center"
    placement-type="Right"
    ui5-responsive-popover=""
    vertical-align="Center"
  >
    <div
      data-component-name="ActionSheetMobileContent"
      role="application"
    >
      <ui5-button
        accessible-name="I should not crash Item 1 of 1"
        data-action-btn-index="0"
        design="Transparent"
        tabindex="0"
        ui5-button=""
      >
        I should not crash
      </ui5-button>
    </div>
  </ui5-responsive-popover>
</body>
`;
